# de-test-etl

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: sa_models.py
db/alembic/: env.py
db/alembic/versions/: 69e07c3abafb_init_schema.py
etl/: loaders.py  main.py  models.py  transformations.py
tests/: conftest.py  test_transformations.py
